--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "npm run build:toolbar && MACOSX_DEPLOYMENT_TARGET=14.0 electrobun build && electrobun dev",
     "build": "npm run build:toolbar && MACOSX_DEPLOYMENT_TARGET=14.0 electrobun build --env=stable",
     "build:stable": "npm run build:toolbar && MACOSX_DEPLOYMENT_TARGET=14.0 electrobun build --env=stable",
+    "build:stable:win": "npm run build:toolbar && electrobun build --env=stable --targets=win-x64",
     "dev:toolbar": "cd src/toolbar-svelte && npx vite build --watch",
     "start:shim": "cd src/toolbar-svelte && npx vite dev --host",
     "test:turndown": "bun run scripts/turndown.test.ts",
