clean up commands, license

--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "type": "module",
   "description": "A markdown-first browser that prioritizes markdown content",
   "scripts": {
-    "build:toolbar": "cd src/toolbar-svelte && npx vite build",
-    "start": "npm run build:toolbar && MACOSX_DEPLOYMENT_TARGET=14.0 electrobun build && electrobun dev",
-    "build": "npm run build:toolbar && MACOSX_DEPLOYMENT_TARGET=14.0 electrobun build --env=stable",
-    "build:stable": "npm run build:toolbar && MACOSX_DEPLOYMENT_TARGET=14.0 electrobun build --env=stable",
-    "build:stable:win": "npm run build:toolbar && electrobun build --env=stable --targets=win-x64",
-    "dev:toolbar": "cd src/toolbar-svelte && npx vite build --watch",
-    "start:shim": "cd src/toolbar-svelte && npx vite dev --host",
+    "build:toolbar": "cd src/toolbar-svelte && bunx vite build",
+    "start": "bun run build:toolbar && MACOSX_DEPLOYMENT_TARGET=14.0 electrobun build && electrobun dev",
+    "build": "bun run build:toolbar && MACOSX_DEPLOYMENT_TARGET=14.0 electrobun build --env=stable",
+    "build:stable": "bun run build:toolbar && MACOSX_DEPLOYMENT_TARGET=14.0 electrobun build --env=stable",
+    "build:stable:win": "bun run build:toolbar && electrobun build --env=stable --targets=win-x64",
+    "dev:toolbar": "cd src/toolbar-svelte && bunx vite build --watch",
+    "start:shim": "cd src/toolbar-svelte && bunx vite dev --host",
     "test:turndown": "bun run scripts/turndown.test.ts",
     "test:comparison": "bun run scripts/turndown-comparison.test.ts",
     "test": "bun run scripts/turndown.test.ts && bun run scripts/turndown-comparison.test.ts"
