--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,7 +55,17 @@ jobs:
         if: matrix.platform == 'linux'
         run: |
           sudo apt-get update
-          sudo apt-get install -y libfuse2
+          sudo apt-get install -y libfuse2 librsvg2-bin
+
+      - name: Ensure Linux app icon
+        if: matrix.platform == 'linux'
+        shell: bash
+        run: |
+          if [[ ! -s "assets/icon-1024.png" ]]; then
+            echo "assets/icon-1024.png missing; generating from assets/icon.svg"
+            rsvg-convert -w 1024 -h 1024 assets/icon.svg -o assets/icon-1024.png
+          fi
+          ls -l assets/icon-1024.png
 
       - name: Validate macOS signing secrets
         if: matrix.platform == 'macos'
@@ -65,16 +75,39 @@ jobs:
           ELECTROBUN_APPLEID: ${{ secrets.ELECTROBUN_APPLEID }}
           ELECTROBUN_APPLEIDPASS: ${{ secrets.ELECTROBUN_APPLEIDPASS }}
           ELECTROBUN_TEAMID: ${{ secrets.ELECTROBUN_TEAMID }}
+          MACOS_CERTIFICATE: ${{ secrets.MACOS_CERTIFICATE }}
+          MACOS_CERTIFICATE_PWD: ${{ secrets.MACOS_CERTIFICATE_PWD }}
         run: |
           missing=()
           [[ -z "$ELECTROBUN_DEVELOPER_ID" ]] && missing+=("ELECTROBUN_DEVELOPER_ID")
           [[ -z "$ELECTROBUN_APPLEID" ]] && missing+=("ELECTROBUN_APPLEID")
           [[ -z "$ELECTROBUN_APPLEIDPASS" ]] && missing+=("ELECTROBUN_APPLEIDPASS")
           [[ -z "$ELECTROBUN_TEAMID" ]] && missing+=("ELECTROBUN_TEAMID")
+          [[ -z "$MACOS_CERTIFICATE" ]] && missing+=("MACOS_CERTIFICATE")
+          [[ -z "$MACOS_CERTIFICATE_PWD" ]] && missing+=("MACOS_CERTIFICATE_PWD")
           if (( ${#missing[@]} )); then
             echo "Missing required macOS signing secrets: ${missing[*]}" >&2
             exit 1
           fi
+
+      - name: Install Apple signing certificate
+        if: matrix.platform == 'macos'
+        env:
+          MACOS_CERTIFICATE: ${{ secrets.MACOS_CERTIFICATE }}
+          MACOS_CERTIFICATE_PWD: ${{ secrets.MACOS_CERTIFICATE_PWD }}
+        run: |
+          security delete-keychain build.keychain || true
+          echo "$MACOS_CERTIFICATE" | base64 --decode > certificate.p12
+          security create-keychain -p actions build.keychain
+          security list-keychains -d user -s build.keychain $(security list-keychains -d user | sed s/\"//g)
+          security default-keychain -s build.keychain
+          security unlock-keychain -p actions build.keychain
+          security import certificate.p12 -k build.keychain -P "$MACOS_CERTIFICATE_PWD" -T /usr/bin/codesign -T /usr/bin/productbuild
+          security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k actions build.keychain
+          security set-keychain-settings -lut 21600 build.keychain
+          echo "Available signing identities:"
+          security find-identity -v -p codesigning build.keychain
+          rm certificate.p12
 
       - name: Build
         run: ${{ matrix.build_cmd }}
